VF-Assignment-2/src/objects/PurchaseOrder__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Your_Name__c</fullName>
        <label>Your Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>PurchaseOrder</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>